--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,17 +2,22 @@ version: '3.8'
 
 services:
   postgres:
-    image: postgres:15
-    container_name: postgres_db
+    image: postgres:14.1-alpine
+    container_name: nestjs_postgres
     restart: always
-    ports:
-      - "5432:5432"
     environment:
-      POSTGRES_DB: tradesim
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: nestjs_db
+    ports:
+      - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
+    healthcheck:
+      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
 volumes:
   pgdata:
