feat: create tutorial service, controller and dtos

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.2.0",
+    "class-validator": "^0.14.2",
     "compose": "^0.1.2",
     "docker": "^1.0.0",
     "pg": "^8.16.0",
