--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-#      - name: Run tests
-#        run: npm run test
+      - name: Run tests
+        run: npm run test
 
       - name: Build app
         run: npm run build
@@ -34,10 +34,9 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
-          key_format: base64
           script: |
             cd /home/${{ secrets.EC2_USER }}/app-folder
             git pull origin master
             npm ci
             npm run build
-            pm2 restart app-name
+            pm2 restart TradeSim
