--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "class-validator": "^0.14.2",
     "compose": "^0.1.2",
     "docker": "^1.0.0",
+    "jest-mock-extended": "^4.0.0-beta1",
     "pg": "^8.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
